# pro_machina

./: .gitignore  Check.csv  README.md  payload.json  pyproject.toml  test_out.json  test_pattern.json
examples/: 01_introduction.py  02_defining_shifts.py  02_more_detailed_products.py  03_orders_and_stock.py  03_unit_measures.py  04_defining_shifts.py  04_machines.py  05_product_level_constraints.py  05_scratch.py  08_machines.py
src/pro_machina/: __init__.py  config.py  durations.py  exceptions.py  measures.py  problem.py  products.py  shifts.py  units.py  util.py
src/pro_machina/constraints/: __init__.py  advanced_hard_constraints.py  hard_constraints.py  soft_constraints.py
src/pro_machina/machines/: batch_machines.py  continuous_machines.py
src/pro_machina/problem/: __init__.py  consumables.py  forecasts.py  machines.py  problem.py  products.py  shifts.py  stocks.py
src/pro_machina/problem/constraints/: __init__.py  _arbiter.py  advanced_hard_constraints.py  constraint_groupings.py  groupings.py  hard_constraints.py  soft_constraints.py  type_checkers.py
src/pro_machina/problem/machines/: batch_machines.py  continuous_machines.py
src/pro_machina/problem/resources/: continental_example.json  six_two_break_example.json  six_two_example.json  two_ten_break_example.json  two_ten_example.json
tests/: conftest.py  test_machines.py  test_shifts.py
